<resources>
    <string name="app_name">Breakdown Assistance</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="panel">Panel</string>
    <string name="control_panel">Control Panel</string>
    <string name="new_garage">New Garage</string>
    <string name="new_service">New Service</string>
    <string name="servicing">Servicing</string>
    <string name="servicing_history">Servicing History</string>
    <string name="servicing_requests">Servicing Requests</string>
    <string name="my_servicing_requests">My Servicing Requests</string>
    <string name="users">Users</string>
    <string name="complaint">Complaint</string>
    <string name="complaints">Complaints</string>
    <string name="otp_description"><![CDATA[We will send you a <b>One Time Password</b> to this mobile number]]></string>
    <string name="enter_otp_description"><![CDATA[Enter the OTP sent to <b>%s</b>]]></string>
    <string name="otp_time">Time Remaining %ss</string>
    <string name="no_additional_info">No Additional Info</string>
    <string name="no_feedback">No Feedback</string>
    <string name="no_review">No Review</string>
    <string name="please_enter_review">Please enter review</string>
    <string name="review_submitted_successfully">Review submitted successfully</string>
    <string name="user_not_logged_in">User not logged in</string>
    <string name="user_not_found">User not found</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="status_updated_successfully">Status updated successfully</string>
    <string name="user">User</string>
    <string name="mechanic">Mechanic</string>
    <string name="admin">Admin</string>
    <string name="logout_and_login_again_to_see_changes">Logout and login again to see changes</string>
    <string name="account_type_changed_successfully">Account type changed successfully</string>
    <string name="not_available">N/A</string>
    <string name="dummy_map_is_ready">Dummy map is ready</string>
    <string name="my_location">My Location</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_garage_name">Enter garage name</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="garage_saved_successfully">Garage saved successfully</string>
    <string name="service_saved_successfully">Service saved successfully</string>
    <string name="you_don_t_have_an_account">You don\'t have an account.</string>
    <string name="unexpected_error_occurred">Unexpected error occurred. Please try again.</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_vehicle_company">Enter vehicle company</string>
    <string name="enter_vehicle_model">Enter vehicle model</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="select_a_garage">Select a garage</string>
    <string name="no_garage_available_at_this_moment">No garage available at this moment</string>
    <string name="request_submitted">Request submitted</string>
    <string name="none">None</string>
    <string name="already_submitted">ALREADY SUBMITTED</string>
    <string name="request_servicing">REQUEST SERVICING</string>
    <string name="enter_contact_info">Enter contact info</string>
    <string name="enter_description">Enter description</string>
    <string name="complaint_submitted_successfully">Complaint submitted successfully</string>
    <string name="hi_there">Hi there</string>
    <string name="you_can_choose_a_service_below">You can choose a service below</string>
    <string name="doorstep">Doorstep</string>
    <string name="bike_and_car_service"><![CDATA[Bike & Car Service]]></string>
    <string name="all_your_vehicle_needs_in_one_place">All your vehicle needs in one place</string>
    <string name="popular_services">Popular Services</string>
    <string name="more_services">More\nServices</string>
    <string name="welcome" translatable="false">WELCOME</string>
    <string name="let_s_get_started" translatable="false">Let\'s get started</string>
    <string name="select_language" translatable="false">Select Language</string>
    <string name="english" translatable="false">ENGLISH</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="log_in">Log In</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="get_otp">GET OTP</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="no_servicing_request_found">No servicing request found</string>
    <string name="add_new_garage">Add New Garage</string>
    <string name="garage_name">Garage Name</string>
    <string name="garage_name_hint">E.g. Habibur Auto Garage</string>
    <string name="latitude">Latitude</string>
    <string name="latitude_hint">E.g. 23.777176</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_hint">E.g. 90.399452</string>
    <string name="submit">SUBMIT</string>
    <string name="add_new_service">Add New Service</string>
    <string name="image_url">Image URL</string>
    <string name="image_url_hint">Ending with .png | .jpg | .jpeg</string>
    <string name="service_title">Title</string>
    <string name="service_title_hint">E.g. Car Wash</string>
    <string name="service_description">Description</string>
    <string name="service_description_hint">Description of the service</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="minimum_price_hint">E.g. 149</string>
    <string name="service_charge">Service Charge</string>
    <string name="service_charge_hint">E.g. 199</string>
    <string name="service_duration">Duration</string>
    <string name="service_duration_hint">In hours</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify">VERIFY</string>
    <string name="didnt_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="user_list">User List</string>
    <string name="user_complaints">User Complaints</string>
    <string name="your_information">Your Information</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_hint">E.g. John Doe</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_hint" translatable="false">+880 XXX XXX XXXX</string>
    <string name="vehicle_company">Vehicle Company</string>
    <string name="vehicle_company_hint">E.g. Ford</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="vehicle_model_hint">E.g. Focus</string>
    <string name="update">UPDATE</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="select_garage">Select Garage</string>
    <string name="select_garage_hint">Choose Garage</string>
    <string name="additional_information">Additional Information</string>
    <string name="additional_information_hint">E.g. I need a car wash service</string>
    <string name="no_servicing_history_found">No servicing history found</string>
    <string name="submit_a_complaint">Submit a Complaint</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_information_hint">Your phone or email</string>
    <string name="complaint_description">Description</string>
    <string name="complaint_description_hint">E.g. I am facing some problems with my car…</string>
    <string name="no_complaint_found">No complaint found</string>
    <string name="service_colon">"Service: "</string>
    <string name="garage_colon">"Garage: "</string>
    <string name="minimum_price_colon">"Minimum Price: "</string>
    <string name="service_charge_colon">"Service Charge: "</string>
    <string name="time_colon">"Time: "</string>
    <string name="additional_information_colon">Additional Information:</string>
    <string name="status_colon">"Status: "</string>
    <string name="feedback_from_mechanic_colon">Feedback From Mechanic:</string>
    <string name="my_review_colon">My Review:</string>
    <string name="review">Review</string>
    <string name="review_hint">Write a review about our service</string>
    <string name="inspections_and_diagnosis"><![CDATA[Inspections & Diagnosis]]></string>
    <string name="repair_cost_provided_later">Repair Cost Is Provided After Inspecting Problem</string>
    <string name="starts_from">Starts From</string>
    <string name="next">Next</string>
    <string name="requested_by_colon">"Requested By: "</string>
    <string name="assigned_to_colon">"Assigned To: "</string>
    <string name="review_colon">Review:</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint">Rejection reason (optional)</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="submitted_by_colon">"Submitted By: "</string>
    <string name="contact_colon">"Contact: "</string>
    <string name="description_colon">Description:</string>
    <string name="name_colon">"Name: "</string>
    <string name="phone_colon">"Phone: "</string>
    <string name="account_colon">"Account: "</string>
    <string name="make_user">Make\nUser</string>
    <string name="make_mechanic">Make\nMechanic</string>
    <string name="make_admin">Make\nAdmin</string>
    <string name="discount_percentage">40%\nDiscount</string>
    <string name="on_all_servicing">On All Servicing</string>
    <string name="company_name" translatable="false">Habibur Car Service</string>
    <string name="location_colon">"Location: "</string>
    <string name="current_location">Current Location</string>
    <string name="current_location_hint">Your current location in details</string>
    <string name="enter_current_location">Enter current location</string>
    <string name="try_another_way">Try Another Way</string>
    <string name="enter_your_credentials">Enter Your Credentials</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="enter_password">Enter password</string>
    <string name="password_length">Password must be atl east 8 characters long</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_mismatch">Password does not match</string>
    <string name="registration_successful">Registration successful</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_reset_email_sent">Password reset email sent to your email address</string>
</resources>