<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LandingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_landing_background" />

    <LinearLayout
        android:id="@+id/layoutLanding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:letterSpacing="0.06"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.04"
            android:text="@string/let_s_get_started"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/landing_content_bg"
            android:gravity="center"
            android:minHeight="120dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:letterSpacing="0.04"
                android:text="@string/select_language"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnglish"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/black"
                android:letterSpacing="0.04"
                android:paddingVertical="14dp"
                android:text="@string/english"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBengali"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/white"
                android:letterSpacing="0.04"
                android:paddingVertical="14dp"
                android:text="@string/bengali"
                android:textColor="@color/black"
                app:strokeColor="#CCC" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>